[gd_scene load_steps=4 format=2]

[ext_resource path="res://icons/add_white_48dp.svg" type="Texture" id=1]
[ext_resource path="res://icons/delete_white_48dp.svg" type="Texture" id=2]
[ext_resource path="res://scripts/nodes/BudgetWidget/CategoryRow.gd" type="Script" id=3]

[node name="VBoxContainer" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
script = ExtResource( 3 )

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
margin_right = 396.0
margin_bottom = 113.0

[node name="HSeparator" type="HSeparator" parent="HBoxContainer2"]
margin_right = 35.0
margin_bottom = 4.0
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 0.1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer2"]
margin_left = 39.0
margin_right = 396.0
margin_bottom = 113.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer2/VBoxContainer"]
margin_right = 357.0
margin_bottom = 54.0

[node name="AddButton" type="Button" parent="HBoxContainer2/VBoxContainer/HBoxContainer"]
margin_right = 60.0
margin_bottom = 54.0
icon = ExtResource( 1 )

[node name="LineEdit" type="LineEdit" parent="HBoxContainer2/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 64.0
margin_right = 293.0
margin_bottom = 54.0
size_flags_horizontal = 3

[node name="DeleteButton" type="Button" parent="HBoxContainer2/VBoxContainer/HBoxContainer"]
margin_left = 297.0
margin_right = 357.0
margin_bottom = 54.0
icon = ExtResource( 2 )

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer2/VBoxContainer"]
margin_top = 58.0
margin_right = 357.0
margin_bottom = 77.0

[node name="Label" type="Label" parent="HBoxContainer2/VBoxContainer/HBoxContainer2"]
margin_right = 79.0
margin_bottom = 19.0
text = "Allocation: "

[node name="AllocationInput" type="HSlider" parent="HBoxContainer2/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 83.0
margin_right = 357.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.01

[node name="ColorPickerButton" type="ColorPickerButton" parent="HBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
margin_top = 81.0
margin_right = 357.0
margin_bottom = 106.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
edit_alpha = false

[node name="HBoxContainer4" type="HBoxContainer" parent="HBoxContainer2/VBoxContainer"]
margin_top = 110.0
margin_right = 357.0
margin_bottom = 113.0

[node name="VSeparator" type="VSeparator" parent="HBoxContainer2/VBoxContainer/HBoxContainer4"]
margin_right = 4.0
margin_bottom = 3.0

[node name="ChildBox" type="VBoxContainer" parent="HBoxContainer2/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
margin_left = 8.0
margin_right = 357.0
margin_bottom = 3.0
size_flags_horizontal = 3

[connection signal="pressed" from="HBoxContainer2/VBoxContainer/HBoxContainer/AddButton" to="." method="_on_AddButton_pressed"]
[connection signal="text_entered" from="HBoxContainer2/VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="HBoxContainer2/VBoxContainer/HBoxContainer/DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="drag_ended" from="HBoxContainer2/VBoxContainer/HBoxContainer2/AllocationInput" to="." method="_on_AllocationInput_drag_ended"]
[connection signal="popup_closed" from="HBoxContainer2/VBoxContainer/ColorPickerButton" to="." method="_on_ColorPickerButton_popup_closed"]
